<resources>
    <string name="app_name">DemoNoteApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_user_mail">Not a valid E-mail</string>
    <string name="invalid_name">Name must be >2 characters</string>
    <string name="invalid_passwords_not_matched">Passwords not matched!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>

    <!-- Strings used for fragments for navigation -->
    <string name="fragment_label_login">Login Fragment</string>
    <string name="fragment_label_sign_up">Sign Up Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up_here">Don\'t have an account?\nSign Up Here</string>
    <string name="start">Start</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="notes_fragment_message">Note List will be displayed here…</string>
    <string name="notes_details_fragment_message">Note Details will be displayed here…</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="note_content">Note content</string>
    <string name="note_dummy_date">23.04.2020 17:24</string>
    <string name="note_dummy_content">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book.</string>
    <string name="save">Save</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="dialog_note_hint">Add your note here…</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_account_text">Already have an account?\nSign in Here</string>
    <string name="sign_out">Sign out</string>
    <string name="ok">OK</string>
    <string name="title_dialog_sign_out">Are your sure you want to sign out?</string>
    <string name="synchronize_data">Synchronize data</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="undo">Undo</string>
    <string name="no_network">No network available</string>
    <string name="refreshed">Refreshed…</string>
</resources>
